[package]
name = "map_types"
version = "0.1.0"
authors = ["Robin Marchart <robin.marchart@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
petgraph = {version = "0.5.1", features = ["serde-1"]}
sha2 = "0.9.2"
structured_digest = {version = "0.1.0", path = "../structured_digest"}
futures = "0.3.8"
nalgebra = "0.23.1"

[features]
