[package]
name = "structured_digest_derive"
version = "0.1.0"
authors = ["Robin Marchart <robin.marchart@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0.52"
quote = "1.0.7"
